--- a/eParty/Views/Account/ResetPassword.cshtml
+++ b/eParty/Views/Account/ResetPassword.cshtml
@@ -1,44 +1,80 @@
 ﻿@model eParty.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Đặt Lại Mật Khẩu";
+    Layout = null;
 }
 
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - eParty</title>
+    <link rel="stylesheet" href="~/Content/login/style.css">
 
-    @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { role = "form" }))
-    {
-        @Html.AntiForgeryToken()
-        <h4>Reset your password.</h4>
-        <hr />
-        @Html.ValidationSummary("", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Code)
-        <div class="row">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 col-form-label" })
-            <div class="col-md-10">
-                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-2 col-md-10">
-                <input type="submit" class="btn btn-outline-dark" value="Reset" />
-            </div>
-        </div>
-    }
-</main>
+    <!-- CSS nội tuyến để hiển thị lỗi validation -->
+    <style>
+        .text-danger {
+            color: #ff3860;
+            font-size: 0.875em;
+            text-align: left;
+            width: 100%;
+            display: block;
+            padding-left: 5px;
+            margin-top: 5px;
+        }
 
-@section Scripts {
+        .validation-summary-errors {
+            color: #ff3860;
+            text-align: center;
+            list-style: none;
+            padding: 0;
+            margin-bottom: 15px;
+        }
+    </style>
+</head>
+<body>
+    <div class="wrapper">
+
+        @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            <!-- Token đặt lại mật khẩu -->
+            @Html.HiddenFor(model => model.Code)
+
+            <h2>@ViewBag.Title</h2>
+            <h4 style="color: #ccc; text-align: center; font-weight: 500; margin-top: -10px; margin-bottom: 20px;">
+                Tạo mật khẩu mới của bạn.
+            </h4>
+
+            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+            <!-- Trường Email -->
+            <div class="input-field">
+                @Html.TextBoxFor(m => m.Email, new { required = "required", autocomplete = "email" })
+                @Html.LabelFor(m => m.Email, "Email của bạn")
+            </div>
+            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+
+            <!-- Trường Password -->
+            <div class="input-field" style="margin-top: 15px;">
+                @Html.PasswordFor(m => m.Password, new { required = "required", autocomplete = "new-password" })
+                @Html.LabelFor(m => m.Password, "Mật khẩu mới")
+            </div>
+            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+
+            <!-- Trường Confirm Password -->
+            <div class="input-field" style="margin-top: 15px;">
+                @Html.PasswordFor(m => m.ConfirmPassword, new { required = "required", autocomplete = "new-password" })
+                @Html.LabelFor(m => m.ConfirmPassword, "Xác nhận mật khẩu mới")
+            </div>
+            @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "text-danger" })
+
+            <button type="submit" style="margin-top: 20px;">Đặt Lại</button>
+        }
+    </div>
+
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
-}
+</body>
+</html>
