--- a/eParty/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/eParty/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,14 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Xác Nhận Đặt Lại Mật Khẩu";
+    Layout = null;
 }
 
-<main aria-labelledby="title">
-    <hgroup class="title">
-        <h1 id="title">@ViewBag.Title.</h1>
-    </hgroup>
-    <div>
-        <p>
-            Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-        </p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - eParty</title>
+    <link rel="stylesheet" href="~/Content/login/style.css">
+    <link rel="stylesheet" href="~/Content/login/SharedMessageTemplate.css">
+</head>
+<body>
+    <div class="wrapper">
+        <h2>@ViewBag.Title</h2>
+        <div>
+            <p>
+                Mật khẩu của bạn đã được đặt lại.
+                Vui lòng @Html.ActionLink("nhấn vào đây để Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            </p>
+        </div>
     </div>
-</main>
+</body>
+</html>
