--- a/eParty/Views/Account/ExternalLoginFailure.cshtml
+++ b/eParty/Views/Account/ExternalLoginFailure.cshtml
@@ -1,10 +1,24 @@
 ﻿@{
-    ViewBag.Title = "Login Failure";
+    ViewBag.Title = "Đăng Nhập Thất Bại";
+    Layout = null;
 }
 
-<main>
-    <hgroup>
-        <h2>@ViewBag.Title.</h2>
-        <h3 class="text-danger">Unsuccessful login with service.</h3>
-    </hgroup>
-</main>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - eParty</title>
+    <link rel="stylesheet" href="~/Content/login/style.css">
+    <link rel="stylesheet" href="~/Content/login/SharedMessageTemplate.css">
+</head>
+<body>
+    <div class="wrapper">
+        <h2>@ViewBag.Title</h2>
+        <h3>Đăng nhập không thành công với dịch vụ.</h3>
+        <p>
+            @Html.ActionLink("Quay lại trang Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: null)
+        </p>
+    </div>
+</body>
+</html>
