--- a/eParty/Views/Account/RegisterConfirmation.cshtml
+++ b/eParty/Views/Account/RegisterConfirmation.cshtml
@@ -1,16 +1,28 @@
-﻿
-@{
-    ViewBag.Title = "RegisterConfirmation";
+﻿@{
+    ViewBag.Title = "Xác Nhận Đăng Ký";
+    Layout = null;
 }
 
-<main aria-labelledby="title">
-    <hgroup class="title">
-        <h1 id="title">@ViewBag.Title.</h1>
-    </hgroup>
-    <div>
-        <p>
-            Please check your email to confirm your account.
-        </p>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - eParty</title>
+    <link rel="stylesheet" href="~/Content/login/style.css">
+    <link rel="stylesheet" href="~/Content/login/SharedMessageTemplate.css">
+</head>
+<body>
+    <div class="wrapper">
+        <h2>@ViewBag.Title</h2>
+        <div>
+            <p>
+                Vui lòng kiểm tra email của bạn để xác nhận tài khoản.
+            </p>
+            <p>
+                @Html.ActionLink("Quay lại trang Đăng nhập", "Login", "Account", routeValues: null, htmlAttributes: null)
+            </p>
+        </div>
     </div>
-</main>
-
+</body>
+</html>
